crates/aranya-policy-compiler/tests/data/facts/invalid_key_name.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: Invalid key: expected i, got k
  |
1 | fact Foo[i int] => {a string}
  |          - expected because of this
2 | action test() {
3 |     check exists Foo[k: 1]
  |                      ^ Invalid key: expected i, got k
